--- a/bin/src/main/resources/hibernate.properties
+++ b/bin/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-hibernate.connection.url=jdbc:mysql://localhost:3306/simpleshop
+hibernate.connection.url=jdbc:mysql://localhost:3306/hibernate?DB_CLOSE_DELAY=-1
 hibernate.connection.username=root
 hibernate.connection.password=qweasdzxc
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
@@ -13,4 +13,4 @@ hibernate.format_sql=true
 hibernate.highlight_sql=true
 
 # Automatically export the schema
-# hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create
